--- a/templates/emprunt/index.html.twig
+++ b/templates/emprunt/index.html.twig
@@ -1,14 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Emprunt index{% endblock %}
+{% block title %}Emprunts{% endblock %}
 
 {% block body %}
-    <h1>Emprunt index</h1>
+    <h1>Liste des Emprunts</h1>
 
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
+                <th>Abonné</th>
+                <th>Livre</th>
                 <th>Date_sortie</th>
                 <th>Date_rendu</th>
                 <th>actions</th>
@@ -17,9 +19,15 @@
         <tbody>
         {% for emprunt in emprunts %}
             <tr>
+            {# 
+            afficher le prénom de l'abonné dans un td, puis dans un autre td
+              le titre du livre suivi de l'auteur, pour chaque emprunt
+             #}
                 <td>{{ emprunt.id }}</td>
-                <td>{{ emprunt.dateSortie ? emprunt.dateSortie|date('Y-m-d') : '' }}</td>
-                <td>{{ emprunt.dateRendu ? emprunt.dateRendu|date('Y-m-d') : '' }}</td>
+                <td>{{ emprunt.abonne.prenom }}</td>
+                <td>{{ emprunt.livre.titre ~ " - " ~ emprunt.livre.auteur }}</td>
+                <td>{{ emprunt.dateSortie ? emprunt.dateSortie|date('d/m/Y') : '' }}</td>
+                <td>{{ emprunt.dateRendu ? emprunt.dateRendu|date('d/m/Y') : '' }}</td>
                 <td>
                     <a href="{{ path('emprunt_show', {'id': emprunt.id}) }}">show</a>
                     <a href="{{ path('emprunt_edit', {'id': emprunt.id}) }}">edit</a>
@@ -34,4 +42,6 @@
     </table>
 
     <a href="{{ path('emprunt_new') }}">Create new</a>
+
+    
 {% endblock %}
