--- a/templates/livre/index.html.twig
+++ b/templates/livre/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Livre index{% endblock %}
+{% block title %}Livres{% endblock %}
 
 {% block body %}
-    <h1>Livre index</h1>
+    <h1>Liste des Livres</h1>
 
     <table class="table">
         <thead>
@@ -21,17 +21,42 @@
                 <td>{{ livre.auteur }}</td>
                 <td>{{ livre.titre }}</td>
                 <td>
-                    <a href="{{ path('livre_show', {'id': livre.id}) }}">show</a>
-                    <a href="{{ path('livre_edit', {'id': livre.id}) }}">edit</a>
+                    <a href="{{ path('livre_show', {'id': livre.id}) }}" class="fa fa-book"></a>
+                    <a href="{{ path('livre_edit', {'id': livre.id}) }}" class="fa fa-edit"></a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="4">no records found</td>
+                <td colspan="4">Aucun livre </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('livre_new') }}">Create new</a>
+    <a href="{{ path('livre_new') }}" class="fa fa-plus"> Ajouter</a>
+
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th colspan="3">Livres sortis</th>
+            </tr>
+            <tr>
+                <th>ID</th>
+                <th>Titre</th>
+                <th>Date Emprunt</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            {# Vous affichez la liste des livres non rendus #}
+            {% for emprunt in empruntsNull %}
+                <tr>
+                    <td>{{ emprunt.livre.id }}</td>
+                    <td>{{ emprunt.livre.titre ~ " - " ~ emprunt.livre.auteur }}</td>
+                    <td>{{ emprunt.dateSortie|date("d/m/y") }}</td>
+                <tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
 {% endblock %}
