--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -6,19 +6,53 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item {{ app.request.pathinfo == path("abonne_index") ? "active" : "" }}">
-        <a class="nav-link" href="{{ path("abonne_index") }}">Abonnés </a>
-      </li>
-      <li class="nav-item {{ app.request.pathinfo == path("livre_index") ? "active" : "" }}">
-        <a class="nav-link" href="{{ path("livre_index") }}">Livres</a>
-      </li>
-      <li class="nav-item {{ app.request.pathinfo == path("emprunt_index") ? "active" : "" }}">
-        <a class="nav-link" href="{{ path("emprunt_index") }}">Emprunts</a>
-      </li>
+      {% if is_granted("ROLE_ADMIN") %}
+  
+        <li class="nav-item {{ app.request.pathinfo == path("abonne_index") ? "active" : "" }}">
+          <a class="nav-link" href="{{ path("abonne_index") }}">Abonnés </a>
+        </li>
+        <li class="nav-item {{ app.request.pathinfo == path("livre_index") ? "active" : "" }}">
+          <a class="nav-link" href="{{ path("livre_index") }}">Livres</a>
+        </li>
+        <li class="nav-item {{ app.request.pathinfo == path("emprunt_index") ? "active" : "" }}">
+          <a class="nav-link" href="{{ path("emprunt_index") }}">Emprunts</a>
+        </li>
+
+      {% endif %}
+
+      {% if is_granted("IS_AUTHENTICATED_FULLY") %}
+
+        <li class="nav-item ">
+          <a class="nav-link" href="{{ path("profil") }}">{{ app.user.username }}</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path("app_logout") }}">
+            <i class="fa fa-sign-out-alt"></i>
+          </a>
+        </li>
+
+      {% else %}
+
+        <li class="nav-item {{ app.request.pathinfo == path("app_login") ? "active" : "" }}">
+          <a class="nav-link" href="{{ path("app_login") }}">
+            <i class="fa fa-sign-in-alt"></i>
+          </a>
+        </li>
+
+        <li class="nav-item {{ app.request.pathinfo == path("app_register") ? "active" : "" }}">
+          <a class="nav-link" href="{{ path("app_register") }}">
+            <i class="fa fa-door-open"></i>
+            
+          </a>
+        </li>
+
+      {% endif %}
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+
+    <form class="form-inline my-2 my-lg-0" action="{{ path("recherche") }}">
+      <input class="form-control mr-sm-2" name="mot_recherche" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Recherche</button>
     </form>
   </div>
 </nav>
