--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,14 @@
         {% endblock %}
 
         <div class="container">
+            {% for type, messages in app.flashes %}
+            <div class="alert alert-{{ type }}">
+                {% for message in messages %}
+                    {{ message|raw }}
+                {% endfor %}
+            </div>
+            {% endfor %}
+
             {% block body %}
                 <h1>Bienvenue à la bibliothèque</h1>
                 <div>
