--- a/templates/abonne/_delete_form.html.twig
+++ b/templates/abonne/_delete_form.html.twig
@@ -1,5 +1,10 @@
-<form method="post" action="{{ path('abonne_delete', {'id': abonne.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('abonne_delete', {'id': abonne.id}) }}" onsubmit="return confirm('Confirmation de la suppression ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ abonne.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn text-danger">
+        <i class="fa fa-trash"></i>
+        {% if texte is defined %}
+            Supprimer
+        {% endif %}
+    </button>
 </form>
