--- a/templates/livre/_delete_form.html.twig
+++ b/templates/livre/_delete_form.html.twig
@@ -1,5 +1,10 @@
-<form method="post" action="{{ path('livre_delete', {'id': livre.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('livre_delete', {'id': livre.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce livre ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ livre.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn">
+        <i class="fa fa-trash text-danger"></i>
+        {% if texte is defined %}
+            Supprimer
+        {% endif %}
+    </button>
 </form>
