--- a/templates/livre/edit.html.twig
+++ b/templates/livre/edit.html.twig
@@ -1,13 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Livre{% endblock %}
+{% block title %}Modifier livre{% endblock %}
 
 {% block body %}
-    <h1>Edit Livre</h1>
 
-    {{ include('livre/_form.html.twig', {'button_label': 'Update'}) }}
+    {% block formulaire %}
+        {{ include('livre/_form.html.twig') }}
+    {% endblock %}
 
-    <a href="{{ path('livre_index') }}">back to list</a>
+    <div class="d-flex justify-content-around">
+        <a href="{{ path('livre_index') }}">
+            <i class="fa fa-reply"></i>
+            Retour
+        </a>
 
-    {{ include('livre/_delete_form.html.twig') }}
+        {{ include('livre/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
