--- a/templates/livre/new.html.twig
+++ b/templates/livre/new.html.twig
@@ -1,11 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Livre{% endblock %}
+{% block title %}Ajouter livre{% endblock %}
 
 {% block body %}
-    <h1>Create new Livre</h1>
-
     {{ include('livre/_form.html.twig') }}
 
-    <a href="{{ path('livre_index') }}">back to list</a>
 {% endblock %}
