--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,17 +15,11 @@
         {% endblock %}
 
         {# MESSAGES #}
-        {% for type, messages in app.flashes %}
-        <div class="alert alert-{{ type }}">
-            {% for message in messages %}
-                {{ message|raw }}
-            {% endfor %}
-        </div>
-        {% endfor %}
+        {% include "message.html.twig" %}
 
-        <div class="container pt-2">
+        <div class="container pt-2 mt-4">
             {% block body %}
-                <h1>Bienvenue à la bibliothèque</h1>
+                <h1>{% block h1 %}Bienvenue à la bibliothèque{% endblock %}</h1>
                 
                 {% block formulaire %}{% endblock %}
                 
