--- a/templates/livre/_form.html.twig
+++ b/templates/livre/_form.html.twig
@@ -4,7 +4,8 @@
 {# <h2> form_start(form)... form_end(form) </h2> {{ form_start(form) }} {{ form_end(form) }} #}
 
 
-{# <h2> form_start(form)...form_widget(form)... form_end(form) </h2>
+{# 
+<h2> form_start(form)...form_widget(form)... form_end(form) </h2>
 {% if livre.couverture is not null %}
     <img class="" src="{{ asset(url_images ~ "livres/" ~ livre.couverture) }}">
 {% endif %}
@@ -17,18 +18,28 @@
 
 {# <h2> form_start(form)...form_widget(form.field)... form_end(form) </h2> #}
 
+{% set livre = form.vars.value %} {# récupère l'objet envoyé comme paramètre dans la méthode createForm #}
 <div class="formulaire">
-    <h1>{{ form.options.titre_formulaire ?? "Formulaire" }}</h1>
+    <h1 class="bg-secondary mb-4">{{ form.options.titre_formulaire ?? "Formulaire" }}</h1>
 
     {{ form_start(form) }}
         {% if livre.couverture is not null %}
-            <img class="vignette" src="{{ asset(url_images ~ "livres/" ~ livre.couverture) }}">
+            <div class="row bg-secondary_">
+                <img class="vignette col-md-1" src="{{ asset(url_images ~ "livres/" ~ livre.couverture) }}">
+                <div class="col-md-11">
         {% endif %}
+
         {{ form_row(form.image) }}
+
+        {% if livre.couverture is not null %}
+                </div>
+            </div>
+        {% endif %}
+                
         {{ form_row(form.auteur) }}
         {{ form_row(form.titre) }}
-        <div class="d-flex justify-content-between">
-            {{ form_row(form.enregistrer, { "class": "mt-3"}) }}
+        <div class="d-flex justify-content-between mt-5">
+            {{ form_row(form.enregistrer, { "class": "btn-secondary" }) }}
             <a href="{{ path('livre_index') }}" class="btn btn-warning form-group">
                 <i class="fa fa-reply"></i>
                 Annuler
