--- a/templates/menu_admin.html.twig
+++ b/templates/menu_admin.html.twig
@@ -1,4 +1,22 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="nav navbar-expand flex-md-column navbar-dark bg-dark flex-row align-items-start">
+    <div class="collapse navbar-collapse">
+        <ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
+            <li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
+                <a class="nav-link {{ app.request.pathinfo == path("abonne_index") ? "active" : "" }}" href="{{ path("abonne_index") }}">Abonnés</a>
+            </liv>
+            <li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
+                <a class="nav-link {{ app.request.pathinfo == path("livre_index") ? "active" : "" }}" href="{{ path("livre_index") }}">Livres</a>
+            </liv>
+            <li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
+                <a class="nav-link {{ app.request.pathinfo == path("emprunt_index") ? "active" : "" }}" href="{{ path("emprunt_index") }}">Emprunts</a>
+            </liv>
+        </ul>
+    </div>
+</nav>
+
+
+{# 
+<nav class="navbar navbar-expand-lgmb-4">
   <a class="navbar-brand" href="{{ path("accueil") }}">Biblio</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -8,14 +26,14 @@
     <ul class="navbar-nav mr-auto">
       {% if is_granted("ROLE_ADMIN") %}
   
-        <li class="nav-item {{ app.request.pathinfo == path("abonne_index") ? "active" : "" }}">
-          <a class="nav-link" href="{{ path("abonne_index") }}">Abonnés </a>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path("abonne_index") }}"> </a>
         </li>
-        <li class="nav-item {{ app.request.pathinfo == path("livre_index") ? "active" : "" }}">
-          <a class="nav-link" href="{{ path("livre_index") }}">Livres</a>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path("livre_index") }}"></a>
         </li>
-        <li class="nav-item {{ app.request.pathinfo == path("emprunt_index") ? "active" : "" }}">
-          <a class="nav-link" href="{{ path("emprunt_index") }}">Emprunts</a>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path("emprunt_index") }}"></a>
         </li>
 
       {% endif %}
@@ -56,4 +74,4 @@
     </form>
   </div>
 </nav>
-
+ #}
