--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -11,8 +11,10 @@ $theme-colors: (
   "dark": #343A40
 );
 $secondary: #b9b8c6;
+$hauteur_footer: 60px;
 
 @import '~bootstrap/scss/bootstrap';
+
 
 body {
     background-image: url("/images/bibpublique_stokholm.png");
@@ -38,12 +40,19 @@ html {
     position: relative;
     min-height: 100%;
 }
+
+body{
+    // height: calc(100vh - #{$hauteur_footer});  // pour utiliser une variable SASS dans la fonction CSS calc
+    height: 100%;
+
+}
  
 .footer {
     position: absolute;
-    bottom: -60px; // <> bottom: 0   =>   pour éviter de cacher le bas de la page
+    bottom: -$hauteur_footer; // <> bottom: 0   =>   pour éviter de cacher le bas de la page
+    // bottom: 0;
     width: 100%;
-    height: 60px;
+    height: $hauteur_footer;
     background: #000000;
     color: #FFFFFF;
 }
