--- a/templates/abonne/_form.html.twig
+++ b/templates/abonne/_form.html.twig
@@ -1,4 +1,7 @@
-{{ form_start(form) }}
+{{ form_start(form, { "attr": { "class": "bg-light" }}) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Enregistrer') }}</button>
+    <button class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button>
+    <a href="{{ path("abonne_index") }}" class="btn btn-warning">
+        <i class="fa fa-reply"></i> Annuler
+    </a>
 {{ form_end(form) }}
