--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -18,7 +18,7 @@
             {% include "admin/menu.html.twig" %}
 		</aside>
 
-		<main class="">
+		<main class="container">
 			<div class="container pt-2">
 				{% include "message.html.twig" %}
 
