--- a/templates/abonne/table.html.twig
+++ b/templates/abonne/table.html.twig
@@ -13,7 +13,7 @@
                 <td>{{ abonne.id }}</td>
                 <td>{{ abonne.prenom }}</td>
                 {# <td>{{ abonne.roles ? abonne.roles|json_encode</td> #}
-                <td>{{ abonne.roles|join(", ")|replace({"ROLE_USER": "Lecteur", "ROLE_ADMIN": "Bibliothécaire"})|default("Lecteur") }}</td>
+                <td>{{ abonne.roles|accreditation }}</td>
                 <td class="d-flex justify-content-around">
                     <a href="{{ path('abonne_show', {'id': abonne.id}) }}">
                         <i class="fa fa-user"></i>
