--- a/templates/abonne/edit.html.twig
+++ b/templates/abonne/edit.html.twig
@@ -1,17 +1,22 @@
 {% extends 'base_admin.html.twig' %}
 
-{% block title %}Modifer Abonné{% endblock %}
+{% block title %}Modifier l'abonné n°{{ abonne.id }}{% endblock %}
 
 {% block body %}
-    <h1>Modifier l'abonné n°{{ abonne.id }}</h1>
 
-    {{ include('abonne/_form.html.twig', {'button_label': 'Actualiser'}) }}
+    {% block formulaire %}
+        <div class="formulaire">
+            <h1 class="bg-secondary mb-4">Modifier l'abonné n°{{ abonne.id }}</h1>
+            {{ include('abonne/_form.html.twig', {'button_label': 'Actualiser'}) }}
+        </div>    
+    {% endblock %}
 
-    <div class="d-flex justify-content-between">
-        <a href="{{ path('abonne_index') }}">
+
+    <div class="d-flex justify-content-between bg-secondary mt-5">
+        <a href="{{ path('abonne_index') }}" class="btn text-primary">
             <i class="fa fa-reply"></i> Retour à la liste
         </a>
 
-        {{ include('abonne/_delete_form.html.twig') }}
+        {% include 'abonne/_delete_form.html.twig' with {"texte": true} %}
     </div>
 {% endblock %}
