--- a/templates/emprunt/_form.html.twig
+++ b/templates/emprunt/_form.html.twig
@@ -1,4 +1,14 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+{% extends "admin/formulaire.html.twig" %}
+
+{% block titre_formulaire %}
+    {{ form.vars.value.options.titre_formulaire ?? "Emprunt" }}
+{% endblock %}
+
+{% block formulaire %}
+    
+    {{ form_start(form) }}
+        {{ form_widget(form) }}
+        <button class="btn">{{ button_label|default('Save') }}</button>
+    {{ form_end(form) }}
+
+{% endblock %}
