--- a/templates/livre/new.html.twig
+++ b/templates/livre/new.html.twig
@@ -1,8 +1,9 @@
 {% extends 'base_admin.html.twig' %}
 
-{% block title %}Ajouter livre{% endblock %}
+{% block title %}Nouveau livre{% endblock %}
 
 {% block body %}
+
     {{ include('livre/_form.html.twig') }}
 
 {% endblock %}
