--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -51,7 +51,8 @@
 
 		{% include "footer.html.twig" %}
 
-		{{ encore_entry_script_tags("app") }}
-		{% block javascripts %}{% endblock %}
+		{% block javascripts %}
+			{{ encore_entry_script_tags("app") }}
+		{% endblock %}
 	</body>
 </html>
