--- a/templates/livre/vignette.html.twig
+++ b/templates/livre/vignette.html.twig
@@ -1,7 +1,7 @@
 <div class="card livre">
     <h4 class="card-header">{{ livre.titre }}</h4>
 
-    <div class="row">
+    <div class="row  couverture">
         <div class="col-4 d-flex align-items-center">
             <img class="card-img p-1" src="{{ asset(url_images_livres ~ livre.couverture) }}">
         </div>
