--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,5 +1,5 @@
 <footer class="footer">
-      <div class="container_">
+      <div class="{{ footer_admin is defined ? "right-aside container" : "" }}">
         <span class="text-muted">Place sticky footer content here.</span>
       </div>
 </footer>
