- menu admin - gestion emprunt

--- a/templates/admin/formulaire.html.twig
+++ b/templates/admin/formulaire.html.twig
@@ -9,7 +9,7 @@
 
 
 {#
- # le block javascripts ne peut pas être dans la fvue _form qui hérite de cette vue 
+ # le block javascripts ne peut pas être dans la vue _form qui hérite de cette vue 
  #  si cette vue n'a pas elle-même un block javascripts
  #}
 {% block javascripts %}{% endblock %}
