--- a/templates/livre/_form.html.twig
+++ b/templates/livre/_form.html.twig
@@ -30,7 +30,7 @@
         {{ form_row(form.auteur) }}
         {{ form_row(form.titre) }}
         <div class="d-flex justify-content-between mt-5">
-            {{ form_row(form.enregistrer, { "class": "btn-secondary" }) }}
+            {{ form_row(form.enregistrer) }}
             <a href="{{ path('livre_index') }}" class="btn btn-warning form-group">
                 <i class="fa fa-reply"></i>
                 Annuler
