--- a/templates/admin/menu.html.twig
+++ b/templates/admin/menu.html.twig
@@ -9,24 +9,65 @@
 				<a class="nav-link {{ app.request.pathinfo == path("abonne_index") ? " active" : " " }}" href="{{ path("abonne_index") }}">
 					Abonnés
 				</a>
+				<ul>
+					<li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
+						<a class="nav-link {{ app.request.pathinfo == path("abonne_index") ? " active" : " " }}" href="{{ path("abonne_index") }}">
+							Liste
+						</a>
+					</li>
+					<li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
+						<a class="nav-link {{ app.request.pathinfo == path("abonne_new") ? " active" : " " }}" href="{{ path("abonne_new") }}">
+							Ajouter
+						</a>
+					</li>
+				</ul>
 			</li>
+
 			</li>
 			<li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
 				<a class="nav-link {{ app.request.pathinfo == path("livre_index") ? " active" : " " }}" href="{{ path("livre_index") }}">
 					Livres
 				</a>
+				<ul>
+					<li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
+						<a class="nav-link {{ app.request.pathinfo == path("livre_index") ? " active" : " " }}" href="{{ path("livre_index") }}">
+							Liste
+						</a>
+					</li>
+					<li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
+						<a class="nav-link {{ app.request.pathinfo == path("livre_new") ? " active" : " " }}" href="{{ path("livre_new") }}">
+							Ajouter
+						</a>
+					</li>
+				</ul>
 			</li>
 			</li>
 			<li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
 				<a class="nav-link {{ app.request.pathinfo == path("emprunt_index") ? " active" : " " }}" href="{{ path("emprunt_index") }}">
 					Emprunts
 				</a>
+				<ul>
+					<li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
+						<a class="nav-link {{ app.request.pathinfo == path("emprunt_index") ? " active" : " " }}" href="{{ path("emprunt_index") }}">
+							Liste
+						</a>
+					</li>
+					<li class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
+						<a class="nav-link {{ app.request.pathinfo == path("emprunt_new") ? " active" : " " }}" href="{{ path("emprunt_new") }}">
+							Ajouter
+						</a>
+					</li>
+				</ul>
 			</li>
 			</li>
 
 			<li class="nav-item">
+				<a class="nav-link">
+				</a>
+			</li>
+			<li class="nav-item">
 				<a class="nav-link" href="{{ path("app_logout") }}">
-					<i class="fa fa-sign-out-alt"></i>Déconnexion
+					<i class="fa fa-sign-out-alt"></i> Déconnexion
 				</a>
 			</li>
 
