--- a/templates/emprunt/_delete_form.html.twig
+++ b/templates/emprunt/_delete_form.html.twig
@@ -1,5 +1,10 @@
 <form method="post" action="{{ path('emprunt_delete', {'id': emprunt.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ emprunt.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn">
+        <i class="fa fa-trash"></i>
+        {% if texte is defined %}
+            Supprimer
+        {% endif %}
+    </button>
 </form>
