--- a/templates/emprunt/_form.html.twig
+++ b/templates/emprunt/_form.html.twig
@@ -10,7 +10,7 @@
         {{ form_widget(form) }}
         <div class="d-flex justify-content-between mt-5">
             <div class="form-group">
-                <button class="btn btn-primary form-group">{{ button_label|default('Enregistrer') }}</button>
+                <button class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button>
             </div>
             <a href="{{ path('emprunt_index') }}" class="btn btn-warning form-group">
                 <i class="fa fa-reply"></i>
