--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -3,31 +3,44 @@
 {% block title %}Gestion {% endblock %}
 
 {% block body %}
-    <h1>Gestion de la bibliotèque</h1>
+    <h1>Gestion de la bibliothèque</h1>
     <div class="card-columns">
         <div class="card">
-            <div class="card-body">    
+            <div class="card-header">
                 <h3>Abonnés</h3>
-                <p>Nombre d'abonnés : {{ nb_abonnes }}</p>
+            </div>
+
+            <div class="card-body">    
+                <p>Nombre d'abonnés : {{ abonnes.nb }}</p>
+            </div>
+            <div class="card-footer">
                 <a class="card-link" href="{{ path("abonne_index") }}"> <i class="fa fa-list-alt"></i> Liste </a>
-                <a class="card-link" href="{{ path("abonne_new") }}"> <i class="fa fa-plus-square"></i> Ajouter </a>
-                
+                <a class="card-link float-right" href="{{ path("abonne_new") }}"> <i class="fa fa-plus-square"></i> Ajouter </a>
             </div>
         </div>
         <div class="card">
-            <div class="card-body">    
-                <h3>Livres</h3>
-                <p>Nombre de livres : {{ nb_livres }}</p>
+            <h3 class="card-header">Livres</h3>
+            <ul class="list-group">
+                <li class="list-group-item">Nombre de livres : <strong class="float-right">{{ livres.nb }}</strong></li>
+                <li class="list-group-item">Empruntés : <strong class="float-right">{{ livres.nbSortis }}</strong></li>
+                <li class="list-group-item">En rayon  : <strong class="float-right">{{ livres.nbDisponibles }}</strong></li>
+                {% set plusAncien = livres.plusAncienEmprunt  %}
+                {% set retard = date(plusAncien.dateSortie).diff(date("now"))  %}
+                <li class="list-group-item">Le plus en retard : <strong class="float-right">{{ plusAncien is not null ? plusAncien.livre.titre ~ " - " ~ retard.days ~" jours" : "" }}</strong></li>
+                <li class="list-group-item">Le plus emprunté : <strong>{{ livres.plusEmprunte["livre"].titre }}</strong><strong class="float-right"> x {{ livres.plusEmprunte["nbEmprunts"] }}</strong></li>
+                <li class="list-group-item">Le moins emprunté : <strong>{{ livres.moinsEmprunte["livre"].titre }}</strong><strong class="float-right"> x {{ livres.moinsEmprunte["nbEmprunts"] }}</strong></li>
+            </ul>
+            <div class="card-footer">
                 <a class="card-link" href="{{ path("livre_index") }}"><i class="fa fa-list-alt"></i> Liste</a>
-                <a class="card-link" href="{{ path("livre_new") }}"><i class="fa fa-plus-square"></i> Ajouter</a>
+                <a class="card-link float-right" href="{{ path("livre_new") }}"><i class="fa fa-plus-square"></i> Ajouter</a>
             </div>
         </div>
         <div class="card">
             <div class="card-body">    
                 <h3>Emprunt</h3>
-                <p>Nombre d'emprunts : {{ nb_emprunts }}</p>
+                <p>Nombre d'emprunts : {{ emprunts.nb }}</p>
                 <a class="card-link" href="{{ path("emprunt_index") }}"><i class="fa fa-list-alt"></i> Liste</a>
-                <a class="card-link" href="{{ path("emprunt_new") }}"><i class="fa fa-plus-square"></i> Ajouter</a>
+                <a class="card-link float-right" href="{{ path("emprunt_new") }}"><i class="fa fa-plus-square"></i> Ajouter</a>
             </div>
         </div>
     </div>
